--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Quicksand", serif;
 }
 
 body,
@@ -13,6 +12,8 @@ body[data-theme="light"] {
   --color-bg-primary: #fff;
   --color-a: black;
   --color-a-hover: #2563eb;
+  --color-post: #1d4ed8;
+  --color-tag: #7c3aed;
 }
 
 body[data-theme="dark"] {
@@ -21,12 +22,13 @@ body[data-theme="dark"] {
   --color-bg-primary: #1e1e1e;
   --color-a: #d1d5db;
   --color-a-hover: #2563eb;
+  --color-post: #fde68a;
+  --color-tag: #fde68a;
 }
 
 body {
   background: var(--color-bg-primary);
   color: var(--color-text-primary);
-  font-family: "Poppins", sans-serif;
   transition: background 0.25s ease-in-out;
 }
 
@@ -41,4 +43,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+p {
+  margin: 0;
 }
