--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,8 +47,12 @@ a {
   box-sizing: border-box;
 }
 
+img {
+  border-radius: 0.5rem;
+}
+
 p {
-  margin: 0;
+  margin: 0.25em 0;
 }
 
 h1,
@@ -64,8 +68,4 @@ h6 {
   margin: 0.75em;
   font-size: medium;
   font-style: italic;
-}
-
-.hyperlink {
-  color: #2563eb;
 }
